force-app/main/default/objects/Port_of_Entry__c/Port_of_Entry__c.object-meta.xml
<CustomObject>
    <label>Port of Entry</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Port of Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Port of Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>