force-app/main/default/objects/Port_of_Entry__c/fields/AI_Response_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Response_Summary__c</fullName>
    <description>Stores the AI reasoning and full response from OpenAI assessment</description>
    <label>AI Response Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>