force-app/main/default/objects/Port_of_Entry__c/fields/CBP_Sector__c.field-meta.xml
<CustomField>
    <fullName>CBP_Sector__c</fullName>
    <label>CBP Sector</label>
    <referenceTo>CBP_Sector_c__c</referenceTo>
    <relationshipLabel>Port of Entries</relationshipLabel>
    <relationshipName>Port_of_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>