force-app/main/default/objects/Port_of_Entry__c/fields/Geopoint__c.field-meta.xml
<CustomField>
    <fullName>Geopoint__c</fullName>
    <description>Geolocation field to the Port of Entry object to enable mapping.</description>
    <label>Geopoint</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>