force-app/main/default/objects/Port_of_Entry__c/fields/Last_Assessed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assessed_Date__c</fullName>
    <description>Timestamp of the last readiness assessment</description>
    <label>Last Assessed Date</label>
    <type>DateTime</type>
</CustomField>