force-app/main/default/objects/Port_of_Entry__c/fields/Readiness_Score__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Score__c</fullName>
    <description>From 0 to 100</description>
    <label>Readiness Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>