force-app/main/default/objects/Port_of_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Readiness_Score__c</columns>
    <columns>Assessment_Status__c</columns>
    <columns>AI_Response_Summary__c</columns>
    <columns>CBP_Sector__c</columns>
    <columns>Geopoint__Longitude__s</columns>
    <columns>Geopoint__Latitude__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>